Fix contact button alignment

--- a/src/styles/_contact.scss
+++ b/src/styles/_contact.scss
@@ -1,12 +1,22 @@
 /* -page contact
 ================================ */
 #contact {
+  overflow-x: hidden;
+
+  @include min(890) {
+    margin-top: 240px;
+  }
+
   h2 {
-    font-size: 3.5em;
+    font-size: 2.5em;
     color: $contact-heading;
     text-align: center;
 
     @include fonts($contact-heading-font, $contact-heading-font-weight);
+
+    @include min(890) {
+      font-size: 3.5em;
+    }
   }
 
   @include max(890) {
@@ -14,14 +24,18 @@
   }
 
   @include min(890) {
-    height: 95vh;
+    height: 90vh;
   }
 }
 
 form {
-  padding-top: 20px;
+  padding-top: 10px;
   padding-right: 10px;
   margin-bottom: 20px;
+
+  @include min(760) {
+    padding-top: 20px;
+  }
 
   @include min(900) {
     margin-bottom: 0;
@@ -35,9 +49,13 @@ form {
     padding: 10px 0;
     font-size: 1.2em;
     color: $form-text;
-    text-align: center;
+    text-align: right;
     background-color: $form-label-bg;
     box-shadow: -4px 4px 7px 1px $form-box-shadow;
+
+    @include min(760) {
+      text-align: center;
+    }
 
     @include min(900) {
       font-size: 3em;
@@ -48,13 +66,33 @@ form {
 
 .form-group {
   margin-bottom: 10px;
+
+  &.form-group-lg {
+    div.col-xs-9 {
+      padding-left: 4px;
+
+      @include min(890) {
+        padding-left: 15px;
+      }
+    }
+  }
+
+  button {
+    @include max(760) {
+      float: right;
+    }
+  }
 }
 
 .form-group-lg .form-control {
   font-size: 1.6em;
 
   &#message {
-    height: 150px;
+    height: 100px;
+
+    @include min(890) {
+      height: 150px;
+    }
   }
 
   @include min(900) {
@@ -62,14 +100,25 @@ form {
   }
 }
 
+@include between(768, 890) {
+  .col-sm-3 {
+    padding-left: 0;
+  }
+}
+
 .btn-lg {
-  padding: 14px 35px;
-  font-size: 1.6em;
+  padding: 5px 10px;
+  font-size: 1.2em;
   color: $form-button-text;
   text-transform: uppercase;
   background-color: $form-button-bg;
   box-shadow: 6px 6px 7px -3px $form-box-shadow;
-  border-radius: 0;
+  border-radius: 4px;
+
+  @include min(760) {
+    padding: 14px 35px;
+    font-size: 1.6em;
+  }
 }
 
 .btn-lg:hover {
@@ -81,6 +130,7 @@ form label,
 .btn-lg {
   @include fonts($form-font, $form-font-weight);
 
-  letter-spacing: 2px;
-  border-radius: 4px;
+  @include min(890) {
+    letter-spacing: 2px;
+  }
 }
