--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -32,11 +32,7 @@ footer.navbar-default.navbar-fixed-bottom {
       padding-top: 2px;
       padding-right: 10px;
       margin: 0;
-      font-size: 1em;
+      font-size: 0.9em;
     }
   }
 }
-
-// .clearme {
-//   clear: both;
-// }
