--- a/src/styles/_portfolio.scss
+++ b/src/styles/_portfolio.scss
@@ -4,135 +4,132 @@
   padding-left: 5px;
   padding-right: 5px;
 
-  .sort-buttons {
-    margin: 0 auto;
-    text-align: center;
+  .hidden-xs.visible-sm {
+    .sort-buttons {
+      margin: 0 auto;
+      text-align: center;
 
-    .btn {
-      margin-top: 5px;
-      background-color: $sort-button-bg;
-      box-shadow: inset 0 0 9px 2px $sort-button-box-shadow;
+      .btn {
+        margin-top: 5px;
+        background-color: $sort-button-bg;
+        box-shadow: inset 0 0 9px 2px $sort-button-box-shadow;
 
-      &:not(:last-child) {
-        margin-right: 8px;
-      }
+        &:not(:last-child) {
+          margin-right: 8px;
+        }
 
-      &:hover {
-        background-color: $sort-button-bg-hover;
-      }
+        &:hover {
+          background-color: $sort-button-bg-hover;
+        }
 
-      @include min(890) {
-        box-shadow: inset 0 0 9px 2px $sort-button-box-shadow, 3px 3px 6px -2px #aaa;
+        @include min(890) {
+          box-shadow: inset 0 0 9px 2px $sort-button-box-shadow, 3px 3px 6px -2px #aaa;
+        }
       }
     }
-  }
 
-  @include min(890) {
-    min-height: 100vh;
-  }
+    @include min(890) {
+      min-height: 100vh;
+    }
 
-  .grid {
-    padding-top: 20px;
-    margin: 0 auto;
+    .grid {
+      padding-top: 20px;
+      margin: 0 auto;
 
-    .grid-sizer,
-    .grid-item {
-      width: 95vw;
-      height: 200px;
-
-      @include min(890) {
+      .grid-sizer,
+      .grid-item {
         width: 360px;
         height: 360px;
       }
-    }
 
-    .grid-item {
-      float: left;
-      border: 2px solid;
-      border-color: $grid-item-border-color;
-      border-radius: 5px;
-      margin-bottom: 5px;
-      padding: 10px auto;
-      color: $portfolio-item-description-font;
-      overflow: hidden;
-      background-image: $grid-item-grad;
-      // background-color: $portfolio-item-bg;
+      .grid-item {
+        float: left;
+        border: 2px solid;
+        border-color: $grid-item-border-color;
+        border-radius: 5px;
+        margin-bottom: 5px;
+        padding: 10px auto;
+        color: $portfolio-item-description-font;
+        overflow: hidden;
+        background-image: $grid-item-grad;
+        background-color: $portfolio-item-bg;
 
-      $list: game-of-life meteorite-strike-map freecodecamp-leaderboard markdown-previewer file-metadata-microservice image-search-abstraction-layer url-shortener request-header-parser wikipedia-viewer timestamp-microservice recipe-box force-directed-graph twitchtv-viewer forecast-app quote-generator histogram scatterplot heatmap;
+        $list: game-of-life meteorite-strike-map freecodecamp-leaderboard markdown-previewer file-metadata-microservice image-search-abstraction-layer url-shortener request-header-parser wikipedia-viewer timestamp-microservice recipe-box force-directed-graph twitchtv-viewer forecast-app quote-generator histogram scatterplot heatmap;
 
-      @each $id in $list {
-        @include make-background(#{$id}, "../images/#{$id}.png");
-      }
-
-      &:hover {
-        background-color: $portfolio-item-bg-hover;
-      }
-
-      /* clearfix */
-      &::after {
-        content: '';
-        display: block;
-        clear: both;
-      }
-
-      a {
-        user-select: none;
-        display: none;
-      }
-
-      p {
-        font-size: 1.2em;
-        display: none;
-        padding: 10px;
-      }
-
-      h3 {
-        margin: 0;
-        font-size: 1.6em;
-      }
-
-      h3,
-      p,
-      a {
-        user-select: none;
-      }
-
-      .description {
-        padding: 10px 10px 8px;
-      }
-
-      .techs {
-        clear: both;
-        display: block;
-        font-style: italic;
-
-        span {
-          color: $tech-list-font-color;
+        @each $id in $list {
+          @include make-background(#{$id}, "../images/#{$id}.png");
         }
-      }
 
-      &.big-item {
-        user-select: none;
-        height: 100vw;
-        width: 95vw;
+        &:hover {
+          background-color: $portfolio-item-bg-hover;
+        }
 
-        @include min(890) {
-          width: 725px;
-          height: 725px;
+        /* clearfix */
+        &::after {
+          content: '';
+          display: block;
+          clear: both;
         }
 
         a {
-          display: inline;
+          user-select: none;
+          display: none;
         }
 
         p {
-          display: inline;
+          font-size: 1.2em;
+          display: none;
+          padding: 10px;
         }
-      }
 
-      @include min(890) {
-        box-shadow: 6px 5px 8px -3px #666;
-        margin-bottom: 18px;
+        h3 {
+          margin: 0;
+          font-size: 1.6em;
+        }
+
+        h3,
+        p,
+        a {
+          user-select: none;
+        }
+
+        .description {
+          padding: 10px 10px 8px;
+        }
+
+        .techs {
+          clear: both;
+          display: block;
+          font-style: italic;
+
+          span {
+            color: $tech-list-font-color;
+          }
+        }
+
+        &.big-item {
+          user-select: none;
+          height: 100vw;
+          width: 95vw;
+
+          @include min(890) {
+            width: 725px;
+            height: 725px;
+          }
+
+          a {
+            display: inline;
+          }
+
+          p {
+            display: inline;
+          }
+        }
+
+        @include min(890) {
+          box-shadow: 6px 5px 8px -3px #666;
+          margin-bottom: 18px;
+        }
       }
     }
   }
